@@ -1,38 +1,28 @@
 package com.leafy.apigateway.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-// @Configuration
+/**
+ * Gateway configuration for CORS allowing all origins
+ */
+@Configuration
 public class CorsConfig {
-
-    @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:5173,https://leafy-fe.vercel.app,https://leafy-fe.vercel.app/login,http://lehao.io.vn,https://lehao.io.vn,http://www.lehao.io.vn,https://www.lehao.io.vn}")
-    private List<String> allowedOrigins;
 
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(allowedOrigins);
-        corsConfig.setMaxAge(3600L);
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        corsConfig.setAllowedHeaders(List.of(
-                "*",
-                "Authorization",
-                "Content-Type",
-                "User-Agent",
-                "X-Device-ID",
-                "X-User-Id",
-                "X-Device-Id"
-        ));
-        corsConfig.setExposedHeaders(List.of("Authorization", "Set-Cookie"));
+        corsConfig.setAllowedOriginPatterns(List.of("*"));
+        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        corsConfig.setAllowedHeaders(List.of("*"));
         corsConfig.setAllowCredentials(true);
+        corsConfig.setExposedHeaders(List.of("Authorization", "Set-Cookie", "X-User-Id", "X-User-Email", "X-User-Roles"));
+        corsConfig.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
